Fix popover alignment overrides

--- a/app/scripts/modules/core/src/application/nav/verticalNav.less
+++ b/app/scripts/modules/core/src/application/nav/verticalNav.less
@@ -4,10 +4,10 @@
   height: 100%;
   background-color: var(--color-accent-g2);
   box-shadow: 2px 0 3px 1px var(--color-alto);
-  min-width: 310px;
+  min-width: 290px;
 
   @media (min-width: 1800px) {
-    width: 340px;
+    width: 320px;
   }
 
   .nav-header {
@@ -33,6 +33,10 @@
       font-size: 75%;
       margin-left: 10px;
       margin-top: 3px;
+
+      .refresh-young {
+        color: var(--color-validation-success);
+      }
     }
 
     .application-name {
